--- a/backend/package.json
+++ b/backend/package.json
@@ -17,5 +17,8 @@
     "mongoose": "^5.12.13",
     "mongoose-unique-validator": "^2.0.3",
     "multer": "^1.4.2"
+  },
+  "devDependencies": {
+    "dotenv-webpack": "^7.0.3"
   }
 }
